<resources>
    <string name="search_no_result">Your search returns no results.</string>
    <string name="home_caps">HOME</string>
    <string name="search_caps">SEARCH</string>
    <string name="cart_caps">CART</string>
    <string name="categories_caps">CATEGORIES</string>
    <string name="apply_caps">APPLY</string>
    <string name="tip_one_black">Going on a trip?\nNot sure that you’ll have enough time\nto do shopping in duty-free?</string>
    <string name="tip_two_black">Buy with MyDutyFree service\nand get a guaranteed discount!</string>
    <string name="tip_two_red">a guaranteed discount</string>
    <string name="tip_three_black">Place an order\nand pick up your goods at the airport\nWith MyDutyFree you don’t have to hurry\nbefore your flight any more!</string>
    <string name="MyDutyFree">MyDutyFree</string>
    <string name="next_tip_caps">NEXT TIP</string>
    <string name="get_started_caps">GET STARTED</string>
    <string name="your_order_number">Your order # is:</string>
    <string name="check_your_mail_caps">CHECK YOUR MAIL</string>
    <string name="continue_shopping_caps">CONTINUE SHOPPING</string>
    <string name="order_hint">You will receive an email with your order confirmation with details of your order and a link to track its progress.</string>
    <string name="back_to_the_shopping_caps">BACK TO SHOPPING</string>
    <string name="product_description_caps">PRODUCT DESCRIPTION</string>
    <string name="product_image_caps">PRODUCT IMAGE</string>
    <string name="add_to_cart_caps">ADD TO CART</string>
    <string name="consist_caps">CONSIST OF</string>
    <string name="description_caps">DESCRIPTION</string>
    <string name="top_sellers_caps">TOP SELLERS</string>
    <string name="new_arrivals_caps">NEW ARRIVALS</string>
    <string name="show_all_goods_caps">SHOW ALL GOODS</string>
    <string name="checkout_caps">CHECKOUT</string>
    <string name="please_fill_fields_below_caps">PLEASE FILL IN THE FIELDS BELOW</string>
    <string name="airport_caps_with_asterisk">*STORE</string>
    <string name="airport_caps">STORE</string>
    <string name="departure_date_caps_with_asterisk">*DEPARTURE DATE</string>
    <string name="departure_date_caps">DEPARTURE DATE</string>
    <string name="departure_time_caps_with_asterisk">*DEPARTURE TIME</string>
    <string name="departure_time_caps">DEPARTURE TIME</string>
    <string name="departure_date_and_time_caps_with_asterisk">*DEPARTURE DATE AND TIME</string>
    <string name="departure_date_and_time_caps">DEPARTURE DATE AND TIME</string>
    <string name="flight_number_caps_with_asterisk">*FLIGHT NUMBER</string>
    <string name="flight_number_caps">FLIGHT NUMBER</string>
    <string name="panorama_card_code_caps">PANORAMA CARD CODE</string>
    <string name="first_name_caps_with_asterisk">*FIRST NAME</string>
    <string name="first_name_caps">FIRST NAME</string>
    <string name="last_name_caps_with_asterisk">*LAST NAME</string>
    <string name="last_name_caps">LAST NAME</string>
    <string name="email_caps_with_asterisk">*EMAIL</string>
    <string name="email_caps">EMAIL</string>
    <string name="email">Email</string>
    <string name="phone_number_caps_with_asterisk">*PHONE NUMBER</string>
    <string name="phone_number_caps">PHONE NUMBER</string>
    <string name="phone_number">Phone number</string>
    <string name="proceed_caps">PROCEED</string>
    <string name="no_flights">No flight is scheduled for this time.</string>
    <string name="please_enter_valid_email">Please enter valid Email</string>
    <string name="please_enter_valid_name">Please enter valid Name</string>
    <string name="please_enter_valid_lastname">Please enter valid Last name</string>
    <string name="please_enter_valid_phone">Please enter valid Phone</string>
    <string name="please_enter_valid_panorama_card_code">Please enter valid Panorama Card code</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_airport">Select Airport</string>
    <string name="select_flight_number">Select Flight number</string>
    <string name="panorama_card_code_hint">Panorama Card code (not less than 7 characters)</string>
    <string name="enter_your_firstname">Enter your First name</string>
    <string name="enter_your_lastname">Enter your Last name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="done">Done</string>
    <string name="done_caps">DONE</string>
    <string name="flight">Flight</string>
    <string name="airport">Store</string>
    <string name="date">Date</string>
    <string name="category_caps">CATEGORY</string>
    <string name="category">Category</string>
    <string name="change_quantity">Change quantity</string>
    <string name="total_cost">Total Cost</string>
    <string name="quantity">Quantity</string>
    <string name="no_items_in_cart">there are no items in your shopping cart</string>
    <string name="make_order_caps">MAKE ORDER</string>
    <string name="back_caps">BACK</string>
    <string name="back">Back</string>
    <string name="technical_problems_caps">TECHNICAL PROBLEMS</string>
    <string name="technical_problems">Technical problems</string>
    <string name="change_order_caps">CHANGE ORDER</string>
    <string name="change_order">Change order</string>
    <string name="cancelling_order_caps">CANCELLING ORDER</string>
    <string name="cancelling_order">Cancelling order</string>
    <string name="customer_support_caps">CUSTOMER SUPPORT</string>
    <string name="customer_support">Customer support</string>
    <string name="imprint_caps">IMPRINT</string>
    <string name="imprint">Imprint</string>
    <string name="terms_and_conditions_caps">TERMS AND CONDITIONS</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="faq">F.A.Q.</string>
    <string name="contact_us_caps">CONTACT US</string>
    <string name="tech_problems_text">In case of technical problems on the site please contact with our support team</string>
    <string name="phone_number_colon">Phone number:</string>
    <string name="phone_number_digits">+38 (067) 828 42 99</string>
    <string name="phone_number_digits_trimmed">+380678284299</string>
    <string name="or_email">or email:</string>
    <string name="email_address">support@mydutyfree.net</string>
    <string name="cancel_order_text">If you want to cancel your order, please fill fields below</string>
    <string name="order_id_caps_asterisk">*ORDER ID</string>
    <string name="order_id_caps">ORDER ID</string>
    <string name="enter_your_order_id">Enter your order ID</string>
    <string name="reason_of_cancelling_caps">REASON OF CANCELLING</string>
    <string name="reason_of_cancelling_hint">Please tell us the reason of cancelling</string>
    <string name="send_caps">SEND</string>
    <string name="order_sent_text">Your inquiry was submitted and will be responded to as soon as possible.\nThank you for contacting us.</string>
    <string name="change_order_text">If you want to change your order or add items to it, please contact us with:</string>
    <string name="settings_caps">SETTINGS</string>
    <string name="ok_caps">OK</string>
    <string name="please_enter_valid_order_ID">Please enter valid order ID</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="server_error">Server error</string>
    <string name="filter">Filter</string>
    <string name="order_cancel_ok">Your request was submitted and will be processed as soon as possible.\nThank you for contacting us.</string>
    <string name="price">Price</string>
    <string name="sort">Sort</string>
    <string name="from_caps">FROM</string>
    <string name="to_caps">TO</string>
    <string name="please_wait">Please wait</string>
    <string name="my_shopping_cart_caps">MY SHOPPING CART</string>
    <string name="no_internet">No internet connection</string>
    <string name="connect_to_the_internet">For the correct operation of the application, please connect to the network.</string>
    <string name="attention_caps">ATTENTION!</string>
    <string name="currency_alert">The basic value of the prices are always calculated in €, this conversion function is for your convenience only, the actual exchange rate within the DF store may differ</string>
    <string name="enter_discount_code_caps">ENTER DISCOUNT CODE</string>
    <string name="discount_code_caps">DISCOUNT CODE</string>
    <string name="enter_your_discount_code">Enter your discount code</string>
    <string name="check_data_accuracy">Check data accuracy</string>
    <string name="Flight_and_contact_details">Flight and contact details</string>
    <string name="departure_date_and_time">Departure date and time</string>
    <string name="flight_number">Flight Number</string>
    <string name="panorama_club_card_number">Panorama club Card Number</string>
    <string name="name_last_name">Name/Last Name</string>
    <string name="total_price">Total price</string>
    <string name="price_with_discount">Price with discount</string>
    <string name="confirm_page_hint">After clicking the \"CONTINUE\" button, you will receive an order confirmation. Be sure to confirm the order!</string>
    <string name="confirm_order">Confirm order</string>
    <string name="name">Name</string>
    <string name="discount">Discount</string>
    <string name="discount_special_offer">* The discount does not apply to special offers and certain products. Discounts do not add up.</string>
    <string name="select_airport_title">TO PURCHASE, PLEASE CHOOSE YOUR DEPARTURE AIRPORT.</string>
    <string name="select_airport_hint">TO PURCHASE, PLEASE, GO TO SETTINGS AND CHOOSE YOUR DEPARTURE AIRPORT</string>
    <string name="select_airport_message_normal">If you are not going to buy anything right now, click</string>
    <string name="select_airport_message_bold">look around</string>
    <string name="invalid_time_toast">Ordering is possible at least two hours before your flight</string>
    <string name="flight_not_found_title">Haven’t found your flight?</string>
    <string name="flight_not_found_message">Would you like to enter it manually?</string>
    <string name="yes_caps">YES</string>
    <string name="no_caps">NO</string>
    <string name="master_card_tip_black">Please note that you need to pay the full amount with Premium MasterCard card: Gold МаstеrСаrd®, World MasterCard®, Platinum MasterCard®, World Elite МаstеrСаrd® to get the %d%% discount.</string>
    <string name="master_card_tip_red">%d%% discount</string>
    <string name="by_date">BY DATE</string>
    <string name="by_price_up">BY PRICE \u25b2</string>
    <string name="by_price_down">BY PRICE \u25bc</string>
    <string name="back_to_main">BACK TO MAIN</string>
    <string name="look_around">Look around</string>
    <string name="is_new">NEW</string>
    <string name="is_best_offer">BEST OFFER</string>
    <string name="app_name">MyDutyFree</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="content_description_image">Image</string>
    <string name="empty"></string>
    <string name="special_offers">Special Offers</string>
    <string name="top_sellers">Top Sellers</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="code_accepted">Code accepted</string>
    <string name="code_invalid">Invalid code</string>
    <string name="code_used">Code already used</string>
    <string name="settings">Settings</string>
    <string name="profile">Account</string>
</resources>