<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtTitleScreenChangeOrder"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/change_order_caps"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/txtTextScreenChangeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/change_order_text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:id="@+id/txtPhoneNumberScreenChangeOrder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/phone_number_colon"
            android:gravity="center"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/btnPhoneScreenChangeOrder"
            style="@style/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/phone_number_digits"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:id="@+id/txtOrEmailScreenChangeOrder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/or_email"
            android:gravity="center"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/btnEmailScreenChangeOrder"
            style="@style/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:singleLine="true"
            android:text="@string/email_address"/>
    </LinearLayout>

</LinearLayout>