<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/txtTitleScreenCancelOrder"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/cancelling_order_caps"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtTextScreenCancelOrder"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_order_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/txtOrderIDScreenCancelOrder"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="16sp"
                android:text="@string/order_id_caps_asterisk"
                android:paddingBottom="5dp"
                />
            <EditText
                android:id="@+id/edtOrderIDScreenCancelOrder"
                android:background="@drawable/button_with_border_enabled"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="numberDecimal"
                android:hint="@string/enter_your_order_id"
                android:textSize="13sp"
                android:singleLine="true"
                android:padding="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/txtEmailScreenCancelOrder"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="16sp"
                android:text="@string/email_caps_with_asterisk"
                android:paddingBottom="5dp"
                />
            <EditText
                android:id="@+id/edtEmailScreenCancelOrder"
                android:background="@drawable/button_with_border_enabled"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/enter_your_email"
                android:textSize="13sp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:padding="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/txtReasonScreenCancelOrder"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="16sp"
                android:text="@string/reason_of_cancelling_caps"
                android:paddingBottom="5dp"
                />
            <EditText
                android:id="@+id/edtReasonScreenCancelOrder"
                android:background="@drawable/button_with_border_enabled"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:hint="@string/reason_of_cancelling_hint"
                android:textSize="13sp"
                android:padding="10dp"
                />
        </LinearLayout>
        <Button
            style="@style/button"
            android:id="@+id/btnSendScreenCancelOrder"
            android:layout_marginTop="25dp"
            android:layout_width="224dp"
            android:layout_height="45dp"
            android:text="@string/send_caps"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            />
    </LinearLayout>
</ScrollView>