<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtSortFilterHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/sort"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:weightSum="90">

        <Button
            android:id="@+id/btnSortByDateFilterHeader"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="30"
            android:elevation="3dp"
            android:padding="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/by_date"
            />

        <Button
            android:id="@+id/btnSortByPriceUpFilterHeader"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="30"
            android:elevation="3dp"
            android:padding="1dp"
            android:text="@string/by_price_up" />

        <Button
            android:id="@+id/btnSortByPriceDownFilterHeader"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="30"
            android:elevation="3dp"
            android:padding="1dp"
            android:text="@string/by_price_down" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtPriceFilterHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/price"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btnApplyFilterHeader"
            android:weightSum="10">

            <EditText
                android:id="@+id/edtPriceFromFilterHeader"
                style="@style/Base.V12.Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:hint="@string/from_caps"
                android:inputType="numberDecimal"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtPriceToFilterHeader"
                style="@style/Base.V12.Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:hint="@string/to_caps"
                android:inputType="numberDecimal"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnApplyFilterHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="30"
            android:elevation="3dp"
            android:padding="0dp"
            android:text="@string/apply_caps" />
    </RelativeLayout>
</LinearLayout>