<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/txtTitleScreenCustomerSupport"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/contact_us_caps"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btnTechnicalProblemsScreenCustomerSupport"
            style="@style/buttonClear"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textSize="16sp"
            android:text="@string/technical_problems_caps"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividers"/>
        <Button
            android:id="@+id/btnCancelingOrderScreenCustomerSupport"
            style="@style/buttonClear"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textSize="16sp"
            android:text="@string/cancelling_order_caps"
            android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividers"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btnChangeOrderScreenCustomerSupport"
            style="@style/buttonClear"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textSize="16sp"
            android:text="@string/change_order_caps"
            android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividers"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btnFAQScreenCustomerSupport"
            style="@style/buttonClear"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textSize="16sp"
            android:text="@string/faq"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividers"/>
    </LinearLayout>
</ScrollView>